<resources>
    <string name="app_name">GLJAGL.COM</string>

    <string name="Main_bottom">南柳二通道高速公路有限公司研制 V1.0</string>
    <string name="Main_top">高速公路质量安全监控系统</string>
    <string name="Main_Camera">GPS拍照</string>
    <string name="Main_Control">监控管理</string>
    <string name="Main_Message">公告通知</string>
    <string name="Main_Me">我的任务</string>
    <string name="Main_Setting">设置</string>
    <string name="web_back">网页返回</string>

    <string name="camera_requestgps">获取GPS</string>
    <string name="camera_get">拍照</string>
    <string name="camera_savephoto">保存照片</string>
    <string name="camera_back">返回首页</string>
    <string name="camera_longitude">经度</string>
    <string name="camera_latitude">纬度</string>
    <string name="camera_dialog_cancel">取消</string>
    <string name="camera_dialog_save">保存</string>

    <string name="setting_update">版本更新</string>
    <string name="setting_savetolocal">网页设置</string>
    <string name="setting_input_control">请输入监控管理网址</string>
    <string name="setting_input_message">请输入公告通知网址</string>
    <string name="setting_input_me">请输入我的任务网址</string>
</resources>
