<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background_light_blue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/activity_button_background_blue"
        >

        <ImageView
            android:layout_alignParentLeft="true"
            android:id="@+id/left_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:paddingLeft="15dp"
            android:paddingRight="0dp"
            android:src="@mipmap/photo_back_press"
            />

        <TextView
            android:id="@+id/top_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Main_Setting"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/right_text"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:paddingRight="15dp"
            android:paddingLeft="0dp"
            android:textSize="18sp"
            android:text="@string/camera_dialog_save"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>
    </RelativeLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp" />
    
    <RelativeLayout
        android:id="@+id/setting_update"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_update"
            android:textColor="@color/activity_button_background_blue"
            android:textSize="22sp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_savetolocal"
            android:textColor="@color/activity_button_background_blue"
            android:textSize="22sp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Main_Control"
            android:textColor="@color/activity_button_background_blue"
            android:textSize="22sp"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            />
        <ToggleButton
            android:id="@+id/control_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dip"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:button="@drawable/switch_bg"
            android:text=""
            android:visibility="gone"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">
        <EditText
            android:id="@+id/set_control_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:hint="@string/setting_input_control"
            android:singleLine="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Main_Message"
            android:textColor="@color/activity_button_background_blue"
            android:textSize="22sp"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            />
        <ToggleButton
            android:id="@+id/message_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dip"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:button="@drawable/switch_bg"
            android:text=""
            android:visibility="gone"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">
        <EditText
            android:id="@+id/set_message_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:hint="@string/setting_input_message"
            android:singleLine="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Main_Me"
            android:textColor="@color/activity_button_background_blue"
            android:textSize="22sp"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            />
        <ToggleButton
            android:id="@+id/me_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dip"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:button="@drawable/switch_bg"
            android:text=""
            android:visibility="gone"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">
        <EditText
            android:id="@+id/set_me_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:hint="@string/setting_input_me"
            android:singleLine="true"/>
    </RelativeLayout>
</LinearLayout>
